--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^0.28.11",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^3.1.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-webpack-plugin": "^5.6.0",
     "ora": "^3.0.0",
     "style-loader": "^0.20.3",
-    "webpack": "^4.3.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.1",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0",
     "webpack-merge": "^4.1.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
